# security

.github/workflows/: ci.yml
active-reconnaissance/: README.md  banner_grabber.py  nmap_scanner.py  port_scanner.py  service_enumerator.py
cybersecurity-lab/: README.md  lab_config.yaml  lab_manager.py  network_topology.py  setup_targets.sh
hardening-static-sites/: README.md
passive-reconnaissance/: README.md  cert_transparency.py  dns_resolver.py  osint_aggregator.py  requirements.txt  whois_lookup.py
python-for-cybersecurity/: README.md  requirements.txt  setup_env.sh
python-for-cybersecurity/examples/: basic_requests.py  basic_socket.py  basic_subprocess.py  ua_fuzzer.py
zdr-honeypot-feed/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
zdr-honeypot-feed/.github/workflows/: ci.yml
zdr-honeypot-feed/deploy/: bootstrap.sh
zdr-honeypot-feed/src/zdr_honeypot_feed/: config.py  geo.py  main.py  models.py  parser.py  signing.py  store.py  tail.py
zdr-honeypot-feed/tests/: test_parser.py  test_signing.py
zdr-triage/: .gitignore  CMakeLists.txt  README.md
zdr-triage/cmake/: CompilerFlags.cmake
zdr-triage/include/zdr/: entropy.hpp  hashing.hpp  ioc.hpp  magic.hpp  triage.hpp
zdr-triage/packaging/homebrew/: zdr-triage.rb
zdr-triage/src/: entropy.cpp  hashing.cpp  ioc.cpp  magic.cpp  main.cpp  ndjson.cpp  triage.cpp
zdr-triage/tests/: CMakeLists.txt  test_entropy.cpp  test_hashing.cpp  test_ioc.cpp  test_magic.cpp
