[project]
name = "zdr-honeypot-feed"
version = "0.1.0"
description = "Signed JSON feed of live honeypot events, consumed by the zerodayresearch.dev threat map."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BUSL-1.1" }
authors = [{ name = "Zachary D. Rife", email = "hello@zerodayresearch.dev" }]

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "geoip2>=4.8",
  "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
zdr-feed = "zdr_honeypot_feed.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zdr_honeypot_feed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
ignore = ["S101"]  # asserts in tests are fine

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
